--- a/automation/services/mina-bp-stats/leaderboard-bot/requirements.txt
+++ b/automation/services/mina-bp-stats/leaderboard-bot/requirements.txt
@@ -21,7 +21,43 @@ requests==2.25.1
 rsa==4.7.2
 six==1.15.0
 urllib3==1.26.3
+beautifulsoup4==4.9.3
+cachetools==4.2.1
+certifi==2020.12.5
+cffi==1.14.5
+chardet==4.0.0
+click==7.1.2
+Flask==1.1.2
+Flask-SQLAlchemy==2.4.4
+google==3.0.0
+google-api-core==1.26.1
+google-auth==1.27.1
+google-cloud-core==1.6.0
+google-cloud-storage==1.36.1
+google-crc32c==1.1.2
+google-resumable-media==1.2.0
+googleapis-common-protos==1.53.0
+idna==2.10
+itsdangerous==1.1.0
+Jinja2==2.11.3
+joblib==1.0.1
+MarkupSafe==1.1.1
+natsort==7.1.1
 numpy==1.19.5
+packaging==20.9
 pandas==1.1.5
-sqlalchemy==1.3.23
-psycopg2==2.8.6
+protobuf==3.15.5
+psycopg2-binary==2.8.6
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.20
+pyparsing==2.4.7
+python-dateutil==2.8.1
+pytz==2021.1
+requests==2.25.1
+rsa==4.7.2
+six==1.15.0
+soupsieve==2.2
+SQLAlchemy==1.3.23
+urllib3==1.26.3
+Werkzeug==1.0.1
