--- a/automation/services/mina-bp-stats/leaderboard-bot/requirements.txt
+++ b/automation/services/mina-bp-stats/leaderboard-bot/requirements.txt
@@ -1,3 +1,4 @@
+Flask-SQLAlchemy==2.4.4
 Flask==1.1.2
 Jinja2==2.11.3
 MarkupSafe==1.1.1
@@ -14,6 +15,7 @@ google-cloud-core==1.6.0
 google-cloud-storage==1.36.1
 google-crc32c==1.1.2
 google-resumable-media==1.2.0
+google==3.0.0
 googleapis-common-protos==1.53.0
 idna==2.10
 itsdangerous==1.1.0
@@ -23,10 +25,12 @@ numpy==1.19.5
 packaging==20.9
 pandas==1.1.5
 protobuf==3.15.5
+psycopg2-binary==2.8.6
 pyasn1-modules==0.2.8
 pyasn1==0.4.8
 pycparser==2.20
 pyparsing==2.4.7
+python-dateutil==2.8.1
 python-http-client==3.3.2
 pytz==2021.1
 requests==2.25.1
