--- a/automation/services/mina-bp-stats/payout-process/Dockerfile
+++ b/automation/services/mina-bp-stats/payout-process/Dockerfile
@@ -6,17 +6,20 @@ COPY requirements.txt .
 
 #COPY main_app/mina_cron /etc/cron.d/mina_cron
 
-RUN apt install at
-RUN apt-get update && apt-get -qq -y install cron
+RUN apt-get update && apt-get -qq -y install cron && apt-get -qq -y install at
 RUN pip3 install -r requirements.txt
-RUN chmod +x ./entrypoint
+#RUN chmod +x ./entrypoint
 #RUN chmod +x ./mina_cron.sh
 
 #RUN chmod +x  /etc/cron.d/mina_cron
 #RUN crontab /etc/cron.d/mina_cron > /opt/minanet/cron-setup.log
-ENTRYPOINT ["/opt/minanet/payout_process/entrypoint"]
+#ENTRYPOINT ["/opt/minanet/payout_process/entrypoint"]
 RUN touch /var/log/cron.log
 CMD cron && tail -f /var/log/cron.log
+
+
+
+
 
 
 
