update code for few fixes- umesh

--- a/automation/services/mina-bp-stats/payout-process/Dockerfile
+++ b/automation/services/mina-bp-stats/payout-process/Dockerfile
@@ -8,14 +8,12 @@ COPY requirements.txt .
 
 RUN apt-get update && apt-get -qq -y install cron && apt-get -qq -y install at
 RUN pip3 install -r requirements.txt
-#RUN chmod +x ./entrypoint
-#RUN chmod +x ./mina_cron.sh
+RUN chmod +x ./entrypoint
+RUN chmod +x ./*.sh
 
-#RUN chmod +x  /etc/cron.d/mina_cron
-#RUN crontab /etc/cron.d/mina_cron > /opt/minanet/cron-setup.log
-#ENTRYPOINT ["/opt/minanet/payout_process/entrypoint"]
-RUN touch /var/log/cron.log
-CMD cron && tail -f /var/log/cron.log
+ENTRYPOINT ["/opt/minanet/payout_process/entrypoint"]
+RUN sh /opt/minanet/payout_process/calculation_scheduler.sh
+RUN sh /opt/minanet/payout_process/validation_scheduler.sh
 
 
 
