--- a/automation/services/mina-bp-stats/leaderboard-bot/Dockerfile
+++ b/automation/services/mina-bp-stats/leaderboard-bot/Dockerfile
@@ -5,17 +5,15 @@ COPY minanet_app/* ./
 COPY requirements.txt .
 COPY minanet_app/mina_cron /etc/cron.d/mina_cron
 
-RUN apt-get update && apt-get -qq -y install cron
+RUN apt-get update && apt-get -qq -y install cron at
 RUN pip3 install -r requirements.txt
 RUN chmod +x ./entrypoint
 RUN chmod +x ./mina_cron.sh
-
+RUN chmod +x ./email_job.sh
+RUN chmod +x ./email_scheduler.sh
 RUN chmod +x  /etc/cron.d/mina_cron
+
 RUN crontab /etc/cron.d/mina_cron > /opt/minanet/cron-setup.log
 ENTRYPOINT ["/opt/minanet/entrypoint"]
 RUN touch /var/log/cron.log
 CMD cron && tail -f /var/log/cron.log
-
-
-
-
