--- a/automation/services/mina-bp-stats/payout-process/Dockerfile
+++ b/automation/services/mina-bp-stats/payout-process/Dockerfile
@@ -10,5 +10,8 @@ COPY main_app/entrypoint ./entrypoint
 RUN chmod +x ./entrypoint
 RUN chmod +x ./*.sh
 
+RUN chmod 644 /etc/crontab
+
 RUN touch /var/run/atd.pid
 ENTRYPOINT ["/opt/minanet/payout_process/entrypoint"]
+CMD crontab && tail -f /var/log/cron.log
