--- a/automation/services/mina-bp-stats/leaderboard-bot/Dockerfile
+++ b/automation/services/mina-bp-stats/leaderboard-bot/Dockerfile
@@ -5,7 +5,7 @@ COPY minanet_app/* ./
 COPY requirements.txt .
 COPY minanet_app/mina_cron /etc/cron.d/mina_cron
 
-RUN apt-get update && apt-get -qq -y install cron at
+RUN apt-get update && apt-get -qq -y install cron at less vi
 RUN pip3 install -r requirements.txt
 RUN chmod +x ./entrypoint
 RUN chmod +x ./mina_cron.sh
