--- a/automation/services/mina-bp-stats/leaderboard-bot/Dockerfile
+++ b/automation/services/mina-bp-stats/leaderboard-bot/Dockerfile
@@ -16,4 +16,4 @@ RUN chmod +x  /etc/cron.d/mina_cron
 RUN crontab /etc/cron.d/mina_cron > /opt/minanet/cron-setup.log
 ENTRYPOINT ["/opt/minanet/entrypoint"]
 RUN touch /var/log/cron.log
-CMD crontab && tail -f /var/log/cron.log
+CMD tail -f /var/log/cron.log
