variables added by mehul

--- a/automation/services/mina-bp-stats/leaderboard-bot/config_variables.env
+++ b/automation/services/mina-bp-stats/leaderboard-bot/config_variables.env
@@ -7,3 +7,7 @@ GCS_BUCKET_NAME=
 SURVEY_INTERVAL_MINUTES=
 UPTIME_DAYS_FOR_SCORE=
 MAX_THREADS_TO_DOWNLOAD_FILES=
+FROM_EMAIL=
+SENDGRID_API_KEY=
+TO_EMAILS=
+SPREADSHEET_NAME=
