--- a/src/lib/hash_prefix_states/dune
+++ b/src/lib/hash_prefix_states/dune
@@ -3,7 +3,7 @@
  (public_name hash_prefix_states)
  (library_flags -linkall)
  (inline_tests)
- (libraries snark_params mina_compile_config random_oracle mina_signature_kind)
+ (libraries snark_params mina_compile_config random_oracle)
  (preprocessor_deps ../../config.mlh)
  (preprocess
   (pps ppx_custom_printf ppx_snarky ppx_version ppx_optcomp ppx_inline_test ppx_compare ppx_deriving_yojson))
